Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23746

Warnings about memory lost after using --flashback server option with binlog_row_image="minimal"

    XMLWordPrintable

Details

    Description

      with --flashback should be used binlog_row_image=FULL,
      but it is allowed to set it to the other value.
      The test below uses binlog_row_image="minimal" +flashback + replace ->
      mtr reports memory lost.

      # run with --mysqld=--flashback
       
      --source include/have_binlog_format_row.inc
      --source include/have_innodb.inc
       
      set binlog_row_image="minimal";
       
      create table t1 (a int primary key, b int) engine=innodb;
      insert into t1 values (1,1), (2,2), (3,3);
       
      reset master;
      replace into t1 values (3,5);
      flush logs;
       
      let $MYSQLD_DATADIR= `select @@datadir`;
      --replace_result $MYSQLTEST_VARDIR MYSQLTEST_VARDIR
      --exec $MYSQL_BINLOG -B $MYSQLD_DATADIR/master-bin.000001 > $MYSQLTEST_VARDIR/tmp/f1.sql
       
      
      

      set binlog_row_image="minimal";
      create table t1 (a int primary key, b int) engine=innodb;
      insert into t1 values (1,1), (2,2), (3,3);
      reset master;
      replace into t1 values (3,5);
      flush logs;
      main.1_my 'innodb'                       [ fail ]
              Test ended at 2020-09-17 16:28:56
       
      CURRENT_TEST: main.1my
       
      Error row length: 0
      Warning:    8 bytes lost at 0x560d25d7c0b0, allocated by T@0 at sql/log_event.cc:3213, sql/log_event.cc:3485, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:993, client/mysqlbinlog.cc:1469, client/mysqlbinlog.cc:2935
      Warning:   16 bytes lost at 0x560d25d7c020, allocated by T@0 at sql/log_event.cc:3257, sql/log_event.cc:3485, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:993, client/mysqlbinlog.cc:1469, client/mysqlbinlog.cc:2935
      Warning:  128 bytes lost at 0x560d25d7bf20, allocated by T@0 at mysys/array.c:70, sql/log_event.cc:3200, sql/log_event.cc:3485, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:993, client/mysqlbinlog.cc:1469
      Warning:   24 bytes lost at 0x560d25d7a180, allocated by T@0 at mysys/mulalloc.c:51, sql/rpl_utility.cc:1054, sql/log_event.h:4275, sql/log_event.cc:3190, sql/log_event.cc:3485, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893
      Warning:   16 bytes lost at 0x560d25d7be90, allocated by T@0 at sql/log_event.cc:10520, sql/log_event.cc:13856, sql/log_event.cc:3482, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:993, client/mysqlbinlog.cc:1469
      Warning:  312 bytes lost at 0x560d25d7bcd0, allocated by T@0 at sql/log_event.h:1329, sql/log_event.cc:3483, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:993, client/mysqlbinlog.cc:1469, client/mysqlbinlog.cc:2935
      Warning:   72 bytes lost at 0x560d25d7a6f0, allocated by T@0 at sql/log_event.cc:3440, sql/log_event.cc:11612, sql/log_event.cc:14020, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:993, client/mysqlbinlog.cc:1469, client/mysqlbinlog.cc:2935, client/mysqlbinlog.cc:2166
      Warning:   16 bytes lost at 0x560d25d6c550, allocated by T@0 at sql/log_event.cc:10520, sql/log_event.cc:13856, sql/log_event.cc:2173, sql/log_event.cc:1929, client/mysqlbinlog.cc:2916, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102, csu/libc-start.c:344
      Warning:  312 bytes lost at 0x560d25d7bb10, allocated by T@0 at sql/log_event.h:1329, sql/log_event.cc:2173, sql/log_event.cc:1929, client/mysqlbinlog.cc:2916, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:  152 bytes lost at 0x560d25d79790, allocated by T@0 at sql/sql_string.cc:105, sql/sql_string.h:376, sql/sql_string.h:389, sql/sql_string.cc:499, sql/log_event.cc:1801, sql/log_event.cc:1898, client/mysqlbinlog.cc:2916, client/mysqlbinlog.cc:2166
      Warning: 4120 bytes lost at 0x560d25d7aa70, allocated by T@0 at mysys/my_alloc.c:243, sql/rpl_tblmap.cc:92, sql/rpl_tblmap.cc:114, sql/log_event.cc:3529, sql/log_event.cc:12523, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:1448, client/mysqlbinlog.cc:2935
      Warning:    8 bytes lost at 0x560d25d7a9e0, allocated by T@0 at mysys/mulalloc.c:51, sql/log_event.cc:12059, sql/log_event.cc:3519, sql/log_event.cc:12523, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:1448, client/mysqlbinlog.cc:2935, client/mysqlbinlog.cc:2166
      Warning:   24 bytes lost at 0x560d25d7a940, allocated by T@0 at mysys/mulalloc.c:51, sql/log_event.cc:12040, sql/log_event.cc:3519, sql/log_event.cc:12523, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:1448, client/mysqlbinlog.cc:2935, client/mysqlbinlog.cc:2166
      Warning:  248 bytes lost at 0x560d25d7a7c0, allocated by T@0 at sql/log_event.h:1329, sql/log_event.cc:3520, sql/log_event.cc:12523, client/mysqlbinlog.cc:893, client/mysqlbinlog.cc:1448, client/mysqlbinlog.cc:2935, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102
      Warning:  144 bytes lost at 0x560d25d7a330, allocated by T@0 at sql/sql_string.cc:105, sql/sql_string.h:376, sql/sql_string.h:389, sql/sql_string.cc:499, sql/log_event.cc:344, sql/log_event.cc:7831, client/mysqlbinlog.cc:1495, client/mysqlbinlog.cc:2935
      Warning:  176 bytes lost at 0x560d25d79d50, allocated by T@0 at mysys/my_malloc.c:229, sql/log_event.cc:6065, sql/log_event.cc:2155, sql/log_event.cc:1929, client/mysqlbinlog.cc:2916, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102, csu/libc-start.c:344
      Warning:  288 bytes lost at 0x560d25d79bb0, allocated by T@0 at sql/log_event.h:1329, sql/log_event.cc:2155, sql/log_event.cc:1929, client/mysqlbinlog.cc:2916, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 16384 bytes lost at 0x560d25d75710, allocated by T@0 at mysys/mf_iocache.c:247, client/mysqlbinlog.cc:2847, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:   72 bytes lost at 0x560d25d6c480, allocated by T@0 at mysys/my_malloc.c:241, mysys/my_open.c:141, mysys/my_open.c:60, client/mysqlbinlog.cc:2845, client/mysqlbinlog.cc:2166, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 131072 bytes lost at 0x7fe941347080, allocated by T@0 at mysys/mf_iocache.c:247, mysys/mf_cache.c:75, sql/log_event.cc:14314, client/mysqlbinlog.cc:2154, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 131072 bytes lost at 0x7fe941368080, allocated by T@0 at mysys/mf_iocache.c:247, mysys/mf_cache.c:75, sql/log_event.cc:14310, client/mysqlbinlog.cc:2154, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 131072 bytes lost at 0x7fe941396080, allocated by T@0 at mysys/mf_iocache.c:247, mysys/mf_cache.c:75, sql/log_event.cc:14309, client/mysqlbinlog.cc:2154, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:  512 bytes lost at 0x560d25d75490, allocated by T@0 at mysys/array.c:70, mysys/hash.c:98, sql/rpl_tblmap.cc:45, sql/log_event.cc:14302, client/mysqlbinlog.cc:2154, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:  512 bytes lost at 0x560d25d6b860, allocated by T@0 at mysys/array.c:70, mysys/hash.c:98, sql/rpl_tblmap.cc:45, sql/log_event.cc:14295, client/mysqlbinlog.cc:2154, client/mysqlbinlog.cc:3102, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 1600 bytes lost at 0x560d25d73dc0, allocated by T@0 at mysys/array.c:70, client/mysqlbinlog.cc:304, client/mysqlbinlog.cc:3060, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 8192 bytes lost at 0x560d25d71d40, allocated by T@0 at mysys/array.c:70, client/mysqlbinlog.cc:3011, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 16384 bytes lost at 0x560d25d6dcc0, allocated by T@0 at mysys/array.c:70, client/mysqlbinlog.cc:3008, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:   40 bytes lost at 0x560d25d6bec0, allocated by T@0 at mysys/my_malloc.c:241, mysys/my_getopt.c:773, mysys/my_getopt.c:623, client/mysqlbinlog.cc:2058, client/mysqlbinlog.cc:2982, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:   16 bytes lost at 0x560d25d6c3f0, allocated by T@0 at mysys/my_malloc.c:241, mysys/my_getopt.c:773, mysys/my_getopt.c:623, client/mysqlbinlog.cc:2058, client/mysqlbinlog.cc:2982, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:    8 bytes lost at 0x560d25d6c360, allocated by T@0 at mysys/my_malloc.c:241, mysys/my_getopt.c:773, mysys/my_getopt.c:623, client/mysqlbinlog.cc:2058, client/mysqlbinlog.cc:2982, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:    8 bytes lost at 0x560d25d6bce0, allocated by T@0 at mysys/my_malloc.c:241, client/mysqlbinlog.cc:1936, mysys/my_getopt.c:626, client/mysqlbinlog.cc:2058, client/mysqlbinlog.cc:2982, csu/libc-start.c:344, 0x560d24a4f1da
      Warning:  472 bytes lost at 0x560d25d6bf70, allocated by T@0 at mysys/my_alloc.c:243, mysys/my_default.c:587, mysys/my_default.c:468, client/mysqlbinlog.cc:2971, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 2048 bytes lost at 0x560d25d6d440, allocated by T@0 at mysys/array.c:70, mysys/hash.c:98, mysys/thr_mutex.c:176, mysys/thr_mutex.c:318, psi/mysql_thread.h:688, mysys/my_fopen.c:72, psi/mysql_file.h:837, mysys/my_default.c:802
      Warning: 2048 bytes lost at 0x560d25d6cbc0, allocated by T@0 at mysys/array.c:70, mysys/hash.c:98, mysys/thr_mutex.c:171, mysys/thr_mutex.c:318, psi/mysql_thread.h:688, mysys/my_fopen.c:72, psi/mysql_file.h:837, mysys/my_default.c:802
      Warning:  208 bytes lost at 0x560d25d6bd70, allocated by T@0 at mysys/mulalloc.c:51, mysys/thr_mutex.c:158, mysys/thr_mutex.c:318, psi/mysql_thread.h:688, mysys/my_fopen.c:72, psi/mysql_file.h:837, mysys/my_default.c:802, mysys/my_default.c:300
      Warning:  472 bytes lost at 0x560d25d6b600, allocated by T@0 at mysys/my_alloc.c:243, mysys/my_default.c:1178, mysys/my_default.c:523, mysys/my_default.c:468, client/mysqlbinlog.cc:2971, csu/libc-start.c:344, 0x560d24a4f1da
      Warning: 2048 bytes lost at 0x560d25d6ab00, allocated by T@0 at mysys/array.c:70, mysys/hash.c:98, mysys/thr_mutex.c:176, mysys/thr_mutex.c:318, psi/mysql_thread.h:688, mysys/my_thr_init.c:308, mysys/my_thr_init.c:190, mysys/my_init.c:105
      Warning: 2048 bytes lost at 0x560d25d6a280, allocated by T@0 at mysys/array.c:70, mysys/hash.c:98, mysys/thr_mutex.c:171, mysys/thr_mutex.c:318, psi/mysql_thread.h:688, mysys/my_thr_init.c:308, mysys/my_thr_init.c:190, mysys/my_init.c:105
      Warning:  208 bytes lost at 0x560d25d6a0f0, allocated by T@0 at mysys/mulalloc.c:51, mysys/thr_mutex.c:158, mysys/thr_mutex.c:318, psi/mysql_thread.h:688, mysys/my_thr_init.c:308, mysys/my_thr_init.c:190, mysys/my_init.c:105, client/mysqlbinlog.cc:2965
      Memory lost: 452560 bytes in 39 chunks
      mysqltest: At line 17: exec of '/10.2/client/mysqlbinlog --defaults-file=/10.2/mysql-test/var/my.cnf --local-load=/10.2/mysql-test/var/tmp -B /10.2/mysql-test/var/mysqld.1/data//master-bin.000001 > /10.2/mysql-test/var/tmp/f1.sql' failed, error: 256, status: 1, errno: 11
      Output from before failure:
      flush logs;
      
      

      Attachments

        Issue Links

          Activity

            People

              bnestere Brandon Nesterenko
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Time Spent - 4.5h Remaining Estimate - 1d
                  1d
                  Logged:
                  Time Spent - 4.5h Remaining Estimate - 1d
                  4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.