MDEV-23746: Warnings about memory lost after using --flashback server option with binlog_row_image=minimal

Problem:
========

Where the combination of --flashback with binlog_row_image=’MINIMAL’
is invalid, and mariadb-binlog will exit early with error if reading
a binary log written to in MINIMAL binlog_row_image using
--flashback, memory leak errors are inappropriately printed as well.

Solution:
========
Suppress the memory leak errors upon the early termination of
mariadb-binlog.

Reviewed By:
============
<TODO>